[project]
name = "defensive-lineage"
version = "0.1.0"
description = "Bridge Power BI lineage into Databricks Unity Catalog"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Jeff", email = "jeff@example.com" }
]
dependencies = [
    "databricks-sdk>=0.20.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "responses>=0.25.0",
]

[project.scripts]
defensive-lineage = "defensive_lineage.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
