[project]
name = "lineage-syncer"
version = "1.0.0"
description = "Bridge Power BI lineage into Databricks Unity Catalog"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "JeffDenzel" }
]
dependencies = [
    "databricks-sdk>=0.20.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "responses>=0.25.0",
]

[project.scripts]
lineage-syncer = "lineage_syncer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
